--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/server.js",
   "scripts": {
-    "start": "node src/server.js",
+    "start": "kill-port 5000 && node src/server.js",
     "dev": "node --watch src/server.js"
   },
   "keywords": [],
@@ -16,5 +16,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "sqlite3": "^5.1.6"
+  },
+  "devDependencies": {
+    "kill-port": "^2.0.1"
   }
 }
